# openswitch-ops-ledd

./: .gitreview  CMakeLists.txt  DESIGN.md  README.md  groups  ledd.c  ledd.h  project.config  reviewers.config
include/: ledd.h  ledd_plugin_interfaces.h  ledd_plugins.h.in
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
plugins/i2c/: CMakeLists.txt  i2c-plugin.c
plugins/sysfs/: CMakeLists.txt  sysfs-plugin.c
src/: led-plugins.pc.in  ledd.c  ledd_plugins.c
src/cli/: CMakeLists.txt  led_vty.c  vtysh_ovsdb_led_context.c
